# tareas

./: .gitignore  .justfile  Cargo.toml  Dockerfile
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  theme.tsx
client/src/components/: BasicTabs.tsx  CustomButton.tsx  CustomTabPanel.tsx  CustomTabs.tsx  TaskItem.tsx  create_first_list.tsx  create_list.tsx  create_task.tsx  custom_item.tsx  custom_task.tsx  dialog_list.tsx  main_menu.tsx  tasks.tsx
client/src/models/: api_list.tsx  api_response.tsx  list.tsx  task.tsx
migrations/: 20241014052001_lists.up.sql  20241014052009_tasks.up.sql  20241014170044_users.up.sql
server/: Cargo.toml
server/migrations/: 20250110181735_lists.up.sql  20250110181740_tasks.up.sql  20250110181746_tags.up.sql  20250110181752_tasks_tags.down.sql  20250110181752_tasks_tags.up.sql
server/src/: main.rs
server/src/http/: health.rs  lists.rs  mod.rs  tasks.rs
server/src/models/: api.rs  error.rs  list.rs  mod.rs  state.rs  tag.rs  task.rs  task_tag.rs
src/: main.rs
src/http/: estatic.rs  jwt_auth.rs  lists.rs  mod.rs  root.rs  user.rs
src/models/: app_state.rs  error_response.rs  list.rs  mod.rs  task.rs  token_claims.rs  user.rs
