[package]
name = "tareas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["cookie"] }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
minijinja = { version = "2.3.1", features = ["loader"] }
once_cell = "1.20.2"
serde = "1.0.210"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
tokio = { version = "1.40.0", features = ["full", "time"] }
tower-http = { version = "0.6.1", features = ["trace", "fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time"] }
