[package]
name = "tareas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["form"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
base64 = "0.22.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = "0.18.1"
jsonwebtoken = "9.3.0"
minijinja = { version = "2.3.1", features = ["loader"] }
once_cell = "1.20.2"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
tokio = { version = "1.40.0", features = ["full", "time"] }
tower-http = { version = "0.6.1", features = ["trace", "fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time"] }
